# libu8gfx

./: Makefile.in  configure
src/: Makefile.am  Makefile.in
