includedir=$(prefix)/include/libm2gui/
lib_LTLIBRARIES=libm2gui.la 
include_HEADERS=
AM_CFLAGS=$(CODE_COVERAGE_CFLAGS) -std=gnu99 -Wall -Werror -Wno-format-y2k -W -Wstrict-prototypes -Wmissing-prototypes \
-Wpointer-arith -Wreturn-type -Wcast-qual -Wwrite-strings -Wswitch \
-Wshadow -Wcast-align -Wchar-subscripts -Winline \
-Wnested-externs -Wredundant-decls -Wmissing-field-initializers -Wextra \
-Wformat=2 -Wno-format-nonliteral -Wpointer-arith -Wno-missing-braces \
-Wno-unused-parameter -Wno-unused-variable -Wno-inline

libm2gui_la_SOURCES=\
./m2align.c\
./m2elradio.c\
./m2navutl.c\
./m2utlu8d.c\
./m2eh6bs.c\
./m2elstrup.c\
./m2elroot.c\
./m2qk.c\
./m2eh4bd.c\
./m2elfnfmt.c\
./m2els8base.c\
./m2elu8num.c\
./m2ellistbase.c\
./m2msg.c\
./m2elbuttonptr.c\
./m2gfxutl.c\
./m2fnarg.c\
./m2ghdummy.c\
./m2elhide.c\
./m2ellabelptr.c\
./m2usrupdn.c\
./m2eltsk.c\
./m2elsetval.c\
./m2navfirst.c\
./m2dfs.c\
./m2rom.c\
./m2ellistxy.c\
./m2elinfo.c\
./m2elxbm.c\
./m2navprev.c\
./m2ehts.c\
./m2navdataup.c\
./m2ellisth.c\
./m2gfx.c\
./m2els8num.c\
./m2navdatadn.c\
./m2ellabel.c\
./m2ellistv.c\
./m2ellistcalc.c\
./m2key.c\
./m2obj.c\
./m2navinit.c\
./m2eltoggle.c\
./m2navupdn.c\
./m2elcombo.c\
./m2navlast.c\
./m2elstr.c\
./m2elstrlist.c\
./m2eltext.c\
./m2ellabelp.c\
./m2navnext.c\
./m2draw.c\
./m2utls8d.c\
./m2navroot.c\
./mas_sim.c\
./m2usrnext.c\
./m2elbutton.c\
./m2ellistgrid.c\
./m2elu8base.c\
./m2pin.c\
./m2elcombofn.c\
./m2elsubutl.c\
./m2eh2bs.c\
./m2elalign.c\
./m2elspace.c\
./m2eh2bd.c\
./m2opt.c\
./mas.c\
./m2el2lmenu.c\
./m2null.c\
./m2eh4bs.c\
./u8glib/m2ghu8gicon.c\
./u8glib/m2ghu8gcffs.c\
./u8glib/m2ghu8gbf.c\
./u8glib/m2ghu8gbfs.c\
./u8glib/m2ghu8gffs.c\
./u8glib/m2ghu8gutl.c\
./u8glib/m2ghu8gfb.c\
./m2.c\
./m2elstrptr.c\
./m2elu8hs.c\
./m2utlstrdat.c\
./m2elslbase.c\
./m2elu32.c\
./m2usrprev.c\
./m2elcomboptr.c\
./m2elsb.c\
./m2ellabelfn.c
libm2gui_la_CFLAGS=$(AM_CFLAGS)

